k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-application
  name: demo-application
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-application
  template:
    metadata:
      labels:
        app: demo-application
      name: demo-application
    spec:
      serviceAccountName: demo-application
      containers:
      - name: demo-application
        image: ${IMAGE}:${VERSION}
        ports:
        - name: http
          containerPort: 8081
        securityContext:
          runAsUser: 65535
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 50Mi
