k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-application
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: demo-application
  type: NodePort
